<resources>
    <string name="app_name">MyInventoryApp</string>
    <string name="serial_numb">Serial Number</string>
    <string name="acquired_da">Acquired Date (yyyy-mm-dd)</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="estimated_p">Estimated Price</string>
    <string name="description">Description</string>
    <string name="scan_image">Autofill from barcode</string>
    <string name="total_cost_view_value">Total Value = $0</string>
    <string name="sort_button_text">Sort</string>
    <string name="filter_button_text">Filter</string>
    <string name="capture_popup_question">Would like to select a photo from your gallery or take a new photo?</string>
    <string name="capture">Capture</string>
    <string name="gallery">Gallery</string>
    <string name="preview_area">preview_area</string>
    <string name="total_value">Total Value = $0</string>
    <string name="add_tags_button_text">Add tags</string>
    <string name="web_client_id">816545990752-0ga26hefuj9iek1ee9g99q10podpee4j.apps.googleusercontent.com</string>
</resources>